public_html/styles.css
@font-face {
    font-family: "Enchanted Land";
    src:
      local("Enchanted Land"),
      url("assets/fonts/Enchanted\ Land.otf") format("opentype")
}

@font-face {
    font-family: "Heavitas";
    src:
      local("Heavitas"),
      url("assets/fonts/Heavitas.ttf") format("truetype")
}

@font-face {
    font-family: "Nexa-Light";
    src: url("assets/fonts/Nexa-ExtraLight.ttf") format("truetype");
}

@font-face {
    font-family: "Nexa-Heavy";
    src: url("assets/fonts/Nexa-Heavy.ttf") format("truetype");
}

@font-face {
    font-family: "Matrix-Mono";
    src: url("assets/fonts/Matrix_Mono.ttf") format("truetype");
}

.primary-font {
    font-family: "Enchanted Land";
}

.secondary-font {
    font-family: "Nexa-Light";
}

img {
    /* image-rendering: crisp-edges; */
    image-rendering: pixelated;
    pointer-events: none;
}

#game-canvas {
    position: absolute;
    left: 0;
    top: 0;
    /* width: 100vw;
    height: 100vh; */
    z-index: 0;
    image-rendering: pixelated;
}

.ui {
    position: absolute;
    color: #eef;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    pointer-events: none;
}

.ui > div {
    position: absolute;
    user-select: none;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    pointer-events: all;
}

.background {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 40%;
}

.inventory-slot {
    position: relative;
    display: inline-block;
    flex: 0 0 72px;
    height: 72px;
}

.inventory-slot .slot-icon {
    display: block;
    width: 100%;
    height: 100%;
}

.inventory-slot .item {
    position: absolute;
    width: 48px;
    height: 48px;
    left: 12px;
    top: 12px;
    display: none;
}

.inventory-slot .count {
    position: absolute;
    right: 9px;
    bottom: 9px;
    text-align: right;
    font-weight: bold;
    text-shadow: 0px 0px 4px white;
    color: #111;
    font-size: 10px;
    font-family: "Matrix-Mono";
}

.inventory-slot .control {
    visibility: hidden;
    position: absolute;
    right: -3px;
    top: -3px;
    background-color: rgba(230, 230, 230, 0.9);
    border: 2px solid black;
    padding: 4px;
    border-radius: 50%;
    text-align: center;
    font-weight: bold;
    text-shadow: 0px 0px 4px white;
    color: #111;
    font-size: 12px;
    font-family: "Matrix-Mono";
}

#held-item-display {
    position: absolute;
    width: 64px;
    height: 64px;
    pointer-events: none;
}

#attack-reload-icon {
    position: absolute;
    pointer-events: none;
    width: 48px;
}

#notifications-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#notifications {
    width: 500px;
    position: absolute;
    height: 250px;
    top: 0px;
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-items: flex-end;
}

.notification {
    font-family: "Matrix-Mono";
    color: rgb(255, 31, 31);
    font-weight: bold;
    font-size: 16px;
    line-height: 1.45em;
    text-shadow: 0px 0px 4px black;
    transition: opacity 0.5s linear;
    text-align: center;
}

#hud-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#hud {
    position: absolute;
    bottom: 15px;
    display: flex;
    flex-direction: column;
}

#debug-info p {
    color: red;
    font-family: sans-serif;
    font-weight: bold;
    margin-left: 6px;
    margin-block: 0;
    font-size: 20px;
}

#hud-row {
    display: flex;
    flex-direction: row;
    height: 100px;
    align-items: flex-end;
    justify-content: space-between;
}

#health-bar {
    position: relative;
    height: 80px;
    display: flex;
    align-items: flex-end;
    width: 390px;
}

#health-bar-frame {
    position: absolute;
    height: 39px;
}

#health-bar-fill-container {
    position: absolute;
    width: 342px;
    height: 33px;
    left: 24px;
    bottom: 6px;
}

#health-bar-fill {
    width: 100%;
    height: 100%;
    background-color: rgb(194, 31, 31);
    transition: width 0.2s ease-in-out;
}

.hud-row-container {
    display: flex;
    align-items: flex-end;
}

.hud-row-container p {
    margin-bottom: 4px;
    font-family: "Heavitas";
    -webkit-text-stroke: 1px black;
    font-size: 14px;
}

#essence-jar {
    width: 96px;
    height: 96px;
}

#hotbar {
    display: flex;
    gap: 5px;
    width: 100%;
    height: 100px;
    align-items: center;
    justify-content: center;
}

#inventory-screen {
    display: none;
}

#inventory {
    position: absolute;
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 3px;
    top: 30%;
    align-items: center;
    justify-content: center;
}

.inventory-row {
    display: flex;
    gap: 3px;
}

#item-display {
    position: absolute;
    width: 200px;
    padding-inline: 10px;
    padding-block: 8px;
    background-color: #e6b45d;
    border-radius: 8px;
    border: 3px solid black;
    font-family: "Nexa-Light";
    font-weight: bold;
    display: none;
}

#item-display #item-title-row {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

#item-title-row p {
    margin: 0;
}

#item-display #item-name {
    color: #222;
    font-size: 20px;
    line-height: 1em;
}

#item-display #item-category {
    color: #777;
    font-style: italic;
    font-size: 12px;
}

#item-display #item-icon {
    width: 32px;
}

#item-display #item-description {
    margin-block: 0;
    margin-inline: 3px;
    color: #333;
    font-size: 13px;
    line-height: 0.9em;
    font-weight: normal;
}

#item-display #item-stats-title {
    color: #222;
    font-size: 14px;
    margin: 6px 0 0 3px;
}

#item-display #item-stats-list {
    color: #333;
    font-size: 12px;
    margin: 0;
    padding-inline-start: 18px;
    line-height: 1.1em;
    font-weight: bold;
}

#pause-screen {
    opacity: 0%;
    visibility: hidden;
    transition: opacity 0.2s ease-in-out, visibility 0.0s linear;
}

#pause-screen .content {
    position: relative;
    z-index: 10;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#pause-screen h1 {
    font-size: 152px;
    -webkit-text-stroke: 2.5px #111;
    text-stroke: 1px #111;
}

